k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-fms
  namespace: webapp-fms
  labels:
    app: webapp-fms
spec:
  type: ClusterIP
  selector:
    app: webapp-fms
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
